# velib-weather-dataeng

./: .env.example  .gitignore  README.md  docker-compose.yml
API Docs/: Meteo.md  Open Data Paris.md
DBT/: .user.yml  Dockerfile  profiles.yml  pyproject.toml
DBT/models/marts/: fct_velib_meteo.sql  schema.yml
DBT/models/staging/: schema.yml  sources.yml  stg_meteo.sql  stg_velib.sql
airflow/: Dockerfile
airflow/dags/: test_dag.py  velib_pipeline.py
dashboard/: .dockerignore  Dockerfile  pyproject.toml  start.sh
dashboard/api/: main.py
dashboard/app/: streamlit_app.py
ingestion/: Dockerfile  config.py  main.py  pyproject.toml
ingestion/fetchers/: meteo_fetcher.py  velib_fetcher.py
postgres/init/: 00_init_airflow_db.sql  01_init_schemas.sql
